--- a/OPass/Storyboard/Session.storyboard
+++ b/OPass/Storyboard/Session.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="da8-XG-o1M">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="da8-XG-o1M">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,7 +16,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="8cd-4y-NsX">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" id="OvI-W1-bgj">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -52,6 +54,7 @@
                                 </connections>
                             </containerView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="sVS-Am-ZeC"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="02z-eb-UgT" secondAttribute="bottom" id="1G5-un-zIh"/>
@@ -59,7 +62,6 @@
                             <constraint firstItem="02z-eb-UgT" firstAttribute="leading" secondItem="sVS-Am-ZeC" secondAttribute="leading" id="e4a-jf-Fso"/>
                             <constraint firstItem="02z-eb-UgT" firstAttribute="top" secondItem="GI1-7h-ouj" secondAttribute="top" id="js4-BL-k2j"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="sVS-Am-ZeC"/>
                     </view>
                     <navigationItem key="navigationItem" id="aFR-2K-GVY"/>
                     <connections>
@@ -115,7 +117,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lQk-52-pGb">
                                         <rect key="frame" x="0.0" y="244" width="426" height="56"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bjw-JH-Lfo">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bjw-JH-Lfo">
                                                 <rect key="frame" x="5" y="12" width="32" height="32"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="32" id="AaM-Bd-0jB"/>
@@ -222,9 +224,10 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DFm-JR-rfR">
                                 <rect key="frame" x="0.0" y="356" width="426" height="295"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="LNH-49-L2R"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="DFm-JR-rfR" firstAttribute="width" secondItem="eyi-gE-afz" secondAttribute="width" id="6jO-JH-VlC"/>
@@ -235,7 +238,6 @@
                             <constraint firstItem="eyi-gE-afz" firstAttribute="width" secondItem="Ina-rW-W7s" secondAttribute="width" id="n0V-Mh-MOp"/>
                             <constraint firstItem="eyi-gE-afz" firstAttribute="bottom" secondItem="DFm-JR-rfR" secondAttribute="top" id="sMU-ba-QpJ"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="LNH-49-L2R"/>
                     </view>
                     <navigationItem key="navigationItem" id="kTJ-DD-Scy"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
@@ -269,8 +271,8 @@
                     <view key="view" contentMode="scaleToFill" id="7Gc-eW-I6f">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="DgU-i5-Baq"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <segue destination="fRg-Pj-D5f" kind="show" identifier="ShowSessionDetail" id="LrT-B4-46j"/>
@@ -303,6 +305,11 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="6YE-Bx-S6r"/>
+        <segue reference="LrT-B4-46j"/>
     </inferredMetricsTieBreakers>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
